run_log.txt
  File "/home/runner/work/goliath-auto-tool/goliath-auto-tool/main.py", line 52
    return default
    ^
IndentationError: expected an indented block after 'if' statement on line 51
